--- a/config/default.yaml
+++ b/config/default.yaml
@@ -299,3 +299,6 @@ ircBridge: null
 
   # The allowed channel prefix of the bot
   #channelPrefix: '#conference-'
+
+templatesPath: ./srv
+runMode: normal
